--- a/style.css
+++ b/style.css
@@ -1,14 +1,7 @@
 body {
     display:flex;
-}
-
-.ImageArea {
-    margin-left: -100px;
-}
-
-.WhiteSpace {
-    border-style: solid;
-    margin-top: -10px;
-    height:50px;
-    width:100%;  
+    margin: 0px;
+    padding: 0px;
+    background-image: url(Photos/Puppybackground.webp);
+    background-position: left center;
 }
