--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
+html {
+    height:100%;
+    width:100%;
+}
+
 body {
-    display:flex;
+    display:grid;
+    grid-template-columns: 1fr 3fr;
     margin: 0px;
     padding: 0px;
     background-image: url(Photos/Puppybackground.webp);
-    background-position: left center;
+    background-size: 1500px;
+    background-origin: border-box;
+    background-position: -340px 0;
+    height: 100%;
+}
+
+.PictureSubSection {
+    height:100%;
+    display: flex;
+    align-items: center;
+}
+
+.BlackBarCaption {
+    opacity: 50%;
+    background-color: black;
+    height: 180px;
+    width: 100%;
+    margin-top: -300px;
+}
+
+.WhiteSpace
+{
+    background-color: white;
+    height:100%;
 }
